--- a/contents/config.yml
+++ b/contents/config.yml
@@ -2,4 +2,4 @@ title: Naiyu Zheng's Homepage
 page-top-title: Naiyu Zheng's Homepage
 # top-section-bg-text: Be what you wanna be
 home-subtitle: Naiyu Zheng
-copyright-text: '&copy; Naiyu Zheng 2025. All Rights Reserved.'
+copyright-text: '&copy; 2025. All Rights Reserved.'
